develop set video like favorite using room dao

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="strVideo">Video:</string>
     <string name="strOriginalLanguage">Original language:</string>
 
+    <string name="toastAddToFavorite">Added to favorites</string>
 </resources>
