--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="strLanguage">Original language is %1$s</string>
 
     <string name="toastAddToFavorite">Added to favorites</string>
+    <string name="toastRemoveFromFavorite">Removed from favorites</string>
 </resources>
